samples/_failures_safe/1761091051_2c2e70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3cfd6f5.c: In function ‘main’:
./samples/SAFE/__tmp_a3cfd6f5.c:163:1: error: expected declaration or statement at end of input
  163 | int main(void) {
      | ^~~
